filter bug cracked, JSON of country/state,stepper form alignmnet in medium screens

--- a/src/app/modules/admin/apps/applicants/update/update.component.scss
+++ b/src/app/modules/admin/apps/applicants/update/update.component.scss
@@ -14,7 +14,7 @@
     min-width: 150px;
     max-height: 432px;
     overflow-y: scroll;
-    background-color: aqua;
+    // background-color: aqua;
 }
 
 .example-full-width {
